--- a/docs/assets/references/mars.bib
+++ b/docs/assets/references/mars.bib
@@ -119,3 +119,64 @@ doi       = "10.1016/0038-092x(90)90156-7"
   doi         = "10.3390/genes9070348",
   pmc         = "PMC6071031"
 }
+
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{Abel2022-sj,
+  title    = "{Photovoltaics-Driven} Power Production Can Support Human
+              Exploration on Mars",
+  author   = "Abel, Anthony J and Berliner, Aaron J and Mirkovic, Mia and
+              Collins, William D and Arkin, Adam P and Clark, Douglas S",
+  abstract = "A central question surrounding possible human exploration of Mars
+              is whether crewed missions can be supported by available
+              technologies using in situ resources. Here, we show that
+              photovoltaics-based power systems would be adequate and practical
+              to sustain a crewed outpost for an extended period over a large
+              fraction of the planet's surface. Climate data were integrated
+              into a radiative transfer model to predict spectrally-resolved
+              solar flux across the Martian surface. This informed detailed
+              balance calculations for solar cell devices that identified
+              optimal bandgap combinations for maximizing production capacity
+              over a Martian year. We then quantified power systems,
+              manufacturing, and agricultural demands for a six-person mission,
+              which revealed that photovoltaics-based power generation would
+              require 10 t of carry-along mass, outperforming alternatives over
+              ∼50\% of Mars' surface.",
+  journal  = "Frontiers in Astronomy and Space Sciences",
+  volume   =  9,
+  year     =  2022,
+  url      = "https://www.frontiersin.org/articles/10.3389/fspas.2022.868519",
+  file     = "All Papers/ABEL/Abel et al. 2022 - Photovoltaics-Driven Power Production Can Support Human Exploration on Mars.pdf",
+  issn     = "2296-987X",
+  doi      = "10.3389/fspas.2022.868519"
+}
+
+
+
+@INCOLLECTION{Landis2004-ih,
+  title     = "Mars Solar Power",
+  booktitle = "2nd International Energy Conversion Engineering Conference",
+  author    = "Landis, Geoffrey and Kerslake, Thomas and Scheiman, David and
+               Jenkins, Phillip",
+  publisher = "American Institute of Aeronautics and Astronautics",
+  series    = "International Energy Conversion Engineering Conference (IECEC)",
+  month     =  "16~" # aug,
+  year      =  2004,
+  url       = "https://doi.org/10.2514/6.2004-5555",
+  file      = "All Papers/LANDIS/Landis et al. 2004 - Mars Solar Power.pdf",
+  doi       = "10.2514/6.2004-5555"
+}
+
+@INPROCEEDINGS{Hargitai2010-hr,
+  title    = "Mars Climate Zone Map Based on {TES} Data",
+  author   = "Hargitai, H",
+  booktitle = "41st Lunar and Planetary Science Conference, held March 1-5, 2010 in The Woodlands, Texas. LPI Contribution No. 1533, p.1199",
+  abstract = "The abstract describes an experiment to construct a climate zone
+              map of Mars, based on MGS TES and other datasets.",
+  pages    = "1199",
+  month    =  "1~" # mar,
+  year     =  2010,
+  url      = "https://ui.adsabs.harvard.edu/abs/2010LPI....41.1199H",
+  file     = "All Papers/HARGITAI/Hargitai 2010 - Mars Climate Zone Map Based on TES Data.pdf"
+}
