added natural resources

--- a/docs/assets/references/mars.bib
+++ b/docs/assets/references/mars.bib
@@ -180,3 +180,136 @@ doi       = "10.1016/0038-092x(90)90156-7"
   url      = "https://ui.adsabs.harvard.edu/abs/2010LPI....41.1199H",
   file     = "All Papers/HARGITAI/Hargitai 2010 - Mars Climate Zone Map Based on TES Data.pdf"
 }
+
+
+@ARTICLE{Owen1988-ma,
+  title    = "Deuterium on Mars: The Abundance of {HDO} and the Value of {D/H}",
+  author   = "Owen, T and Maillard, J P and de Bergh, C and Lutz, B L",
+  abstract = "Deuterium on Mars has been detected by the resolution of several
+              Doppler-shifted lines ofHDO near 3.7 micrometers in the planet's
+              spectrum. The ratio of deuterium to hydrogen is (9 +/- 4) x
+              10(-4); the abundance of H(2)0 was derived from lines near 1.1
+              micrometers. This ratio is enriched on Mars over the teiluric
+              value by a factor of6 +/- 3. The enrichment implies that hydrogen
+              escaped more rapidly from Mars in the past than it does now,
+              consistent with a dense and warm ancient atmosphere on the
+              planet.",
+  journal  = "Science",
+  volume   =  240,
+  number   =  4860,
+  pages    = "1767",
+  month    =  "24~" # jun,
+  year     =  1988,
+  url      = "http://dx.doi.org/10.1126/science.240.4860.1767",
+  file     = "All Papers/OWEN/Owen et al. 1988 - Deuterium on Mars - The Abundance of HDO and the Value of D - H.pdf",
+  language = "en",
+  issn     = "0036-8075",
+  pmid     = "17842429",
+  doi      = "10.1126/science.240.4860.1767"
+}
+
+
+@TECHREPORT{Moses2016-ly,
+  title    = "Frontier {In-Situ} Resource Utilization for Enabling Sustained
+              Human Presence on Mars",
+  author   = "Moses, Robert W and Bushnell, Dennis M",
+  institution = "NASA Langley Research Center Hampton",
+  abstract = "The currently known resources on Mars are massive, including
+              extensive quantities of water and carbon dioxide and therefore
+              carbon, hydrogen and oxygen for life support, fuels and plastics
+              and much else. The regolith is replete with all manner of
+              minerals. In Situ Resource Utilization (ISRU) applicable frontier
+              technologies include robotics, machine intelligence,
+              nanotechnology, synthetic biology, 3-D printing/additive
+              manufacturing and autonomy. These technologies combined with the
+              vast natural resources should enable serious, pre- and post-human
+              arrival ISRU to greatly increase reliability and safety and
+              reduce cost for human colonization of Mars. Various system-level
+              transportation concepts employing Mars produced fuel would enable
+              Mars resources to evolve into a primary center of trade for the
+              inner solar system for eventually nearly everything required for
+              space faring and colonization. Mars resources and their
+              exploitation via extensive ISRU are the key to a viable, safe and
+              affordable, human presence beyond Earth. The purpose of this
+              paper is four-fold: 1) to highlight the latest discoveries of
+              water, minerals, and other materials on Mars that reshape our
+              thinking about the value and capabilities of Mars ISRU; 2) to
+              summarize the previous literature on Mars ISRU processes,
+              equipment, and approaches; 3) to point to frontier ISRU
+              technologies and approaches that can lead to safe and affordable
+              human missions to Mars; and 4) to suggest an implementation
+              strategy whereby the ISRU elements are phased into the mission
+              campaign over time to enable a sustainable and increasing human
+              presence on Mars.",
+  number   = "NF1676L-20756",
+  month    =  "1~" # apr,
+  year     =  2016,
+  url      = "https://ntrs.nasa.gov/citations/20160005963",
+  file     = "All Papers/MOSES/Moses and Bushnell 2016 - Frontier In-Situ Resource Utilization for Enabling Sustained Human Presence on Mars.pdf"
+}
+
+
+@ARTICLE{Rummel2014-kb,
+  title       = "A new analysis of Mars ``Special Regions'': findings of the
+                 second {MEPAG} Special Regions Science Analysis Group
+                 ({SR-SAG2})",
+  author      = "Rummel, John D and Beaty, David W and Jones, Melissa A and
+                 Bakermans, Corien and Barlow, Nadine G and Boston, Penelope J
+                 and Chevrier, Vincent F and Clark, Benton C and de Vera,
+                 Jean-Pierre P and Gough, Raina V and Hallsworth, John E and
+                 Head, James W and Hipkin, Victoria J and Kieft, Thomas L and
+                 McEwen, Alfred S and Mellon, Michael T and Mikucki, Jill A and
+                 Nicholson, Wayne L and Omelon, Christopher R and Peterson,
+                 Ronald and Roden, Eric E and Sherwood Lollar, Barbara and
+                 Tanaka, Kenneth L and Viola, Donna and Wray, James J",
+  affiliation = "1 Department of Biology, East Carolina University ,
+                 Greenville, North Carolina, USA .",
+  abstract    = "A committee of the Mars Exploration Program Analysis Group
+                 (MEPAG) has reviewed and updated the description of Special
+                 Regions on Mars as places where terrestrial organisms might
+                 replicate (per the COSPAR Planetary Protection Policy). This
+                 review and update was conducted by an international team
+                 (SR-SAG2) drawn from both the biological science and Mars
+                 exploration communities, focused on understanding when and
+                 where Special Regions could occur. The study applied recently
+                 available data about martian environments and about
+                 terrestrial organisms, building on a previous analysis of Mars
+                 Special Regions (2006) undertaken by a similar team. Since
+                 then, a new body of highly relevant information has been
+                 generated from the Mars Reconnaissance Orbiter (launched in
+                 2005) and Phoenix (2007) and data from Mars Express and the
+                 twin Mars Exploration Rovers (all 2003). Results have also
+                 been gleaned from the Mars Science Laboratory (launched in
+                 2011). In addition to Mars data, there is a considerable body
+                 of new data regarding the known environmental limits to life
+                 on Earth-including the potential for terrestrial microbial
+                 life to survive and replicate under martian environmental
+                 conditions. The SR-SAG2 analysis has included an examination
+                 of new Mars models relevant to natural environmental variation
+                 in water activity and temperature; a review and
+                 reconsideration of the current parameters used to define
+                 Special Regions; and updated maps and descriptions of the
+                 martian environments recommended for treatment as
+                 ``Uncertain'' or ``Special'' as natural features or those
+                 potentially formed by the influence of future landed
+                 spacecraft. Significant changes in our knowledge of the
+                 capabilities of terrestrial organisms and the existence of
+                 possibly habitable martian environments have led to a new
+                 appreciation of where Mars Special Regions may be identified
+                 and protected. The SR-SAG also considered the impact of
+                 Special Regions on potential future human missions to Mars,
+                 both as locations of potential resources and as places that
+                 should not be inadvertently contaminated by human activity.",
+  journal     = "Astrobiology",
+  volume      =  14,
+  number      =  11,
+  pages       = "887--968",
+  month       =  nov,
+  year        =  2014,
+  url         = "http://dx.doi.org/10.1089/ast.2014.1227",
+  file        = "All Papers/RUMMEL/Rummel et al. 2014 - A new analysis of Mars 'Special Regions' - findings of the second MEPAG Special Regions Science Analysis Group (SR-SAG2).pdf",
+  language    = "en",
+  issn        = "1531-1074, 1557-8070",
+  pmid        = "25401393",
+  doi         = "10.1089/ast.2014.1227"
+}
